Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-75677

Occasional application crash while intensive Loader usage

XMLWordPrintable

    • 5400af8850a7a73a19443839fbd0c8f3d45b091b (qt/qtwayland/5.12)

      If application tries to load a qml file by Loader and the Loader hasn't loaded previous qml yet, the crash occurs sometimes. Probability to get the crash increases if the application has been trying to reload qml files for a while.

      Here is a back trace for our application before it crashed.

      #0  __GI_raise (sig=sig@entry=6) at /usr/src/debug/glibc/2.25-r0/git/sysdeps/unix/sysv/linux/raise.c:51
      #1  0x0000007fadb80610 in __GI_abort () at /usr/src/debug/glibc/2.25-r0/git/stdlib/abort.c:89
      #2  0x0000007fadbb8784 in __libc_message (do_abort=do_abort@entry=2, fmt=fmt@entry=0x7fadc6a9b8 "*** Error in `%s': %s: 0x%s ***\n") at /usr/src/debug/glibc/2.25-r0/git/sysdeps/posix/libc_fatal.c:175
      #3  0x0000007fadbbec80 in malloc_printerr (action=<optimized out>, str=0x7fadc6aa00 "corrupted double-linked list", ptr=<optimized out>, ar_ptr=<optimized out>)
          at /usr/src/debug/glibc/2.25-r0/git/malloc/malloc.c:5077
      #4  0x0000007fadbbf058 in malloc_consolidate (av=av@entry=0x7fadc92998 <main_arena>) at /usr/src/debug/glibc/2.25-r0/git/malloc/malloc.c:4182
      #5  0x0000007fadbbfb08 in _int_free (av=0x7fadc92998 <main_arena>, p=<optimized out>, have_lock=0) at /usr/src/debug/glibc/2.25-r0/git/malloc/malloc.c:4082
      #6  0x0000007faf22b17c in QObjectPrivate::~QObjectPrivate (this=0x9d9460, __in_chrg=<optimized out>) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:262
      #7  0x0000007faf22b1c4 in QObjectPrivate::~QObjectPrivate (this=0x9d9460, __in_chrg=<optimized out>) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:269
      #8  0x0000007faf232b70 in QScopedPointerDeleter<QObjectData>::cleanup (pointer=<optimized out>) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/tools/qscopedpointer.h:60
      #9  QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::~QScopedPointer (this=0x7faf232b34 <QObject::~QObject()+1052>, __in_chrg=<optimized out>)
          at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/tools/qscopedpointer.h:107
      #10 QObject::~QObject (this=<optimized out>, __in_chrg=<optimized out>) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:891
      #11 0x0000007faf7805c8 in QQmlPrivate::QQmlElement<QObject>::~QQmlElement (this=0x1db5990, __in_chrg=<optimized out>)
          at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/qml/qml/qqmlprivate.h:103
      #12 QQmlPrivate::QQmlElement<QObject>::~QQmlElement (this=0x1db5990, __in_chrg=<optimized out>) at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/qml/qml/qqmlprivate.h:103
      #13 0x0000007faf229540 in QObjectPrivate::deleteChildren (this=this@entry=0xa73640) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:2010
      #14 0x0000007faf232b2c in QObject::~QObject (this=<optimized out>, __in_chrg=<optimized out>) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:1032
      #15 0x0000007fb007972c in QQuickItem::~QQuickItem (this=0x16b04f0, __in_chrg=<optimized out>) at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/quick/items/qquickitem.cpp:2383
      #16 0x0000007fb00987fc in QQmlPrivate::QQmlElement<QQuickImage>::~QQmlElement (this=0x16b04f0, __in_chrg=<optimized out>)
          at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/qml/qml/qqmlprivate.h:103
      #17 QQmlPrivate::QQmlElement<QQuickImage>::~QQmlElement (this=0x16b04f0, __in_chrg=<optimized out>) at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/qml/qml/qqmlprivate.h:103
      #18 0x0000007faf229540 in QObjectPrivate::deleteChildren (this=this@entry=0x1588ac0) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:2010
      #19 0x0000007faf232b2c in QObject::~QObject (this=<optimized out>, __in_chrg=<optimized out>) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:1032
      #20 0x0000007fb007972c in QQuickItem::~QQuickItem (this=0x141e8a0, __in_chrg=<optimized out>) at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/quick/items/qquickitem.cpp:2383
      #21 0x0000007fb0098c5c in QQmlPrivate::QQmlElement<QQuickItem>::~QQmlElement (this=0x141e8a0, __in_chrg=<optimized out>)
          at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/qml/qml/qqmlprivate.h:103
      #22 QQmlPrivate::QQmlElement<QQuickItem>::~QQmlElement (this=0x141e8a0, __in_chrg=<optimized out>) at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/qml/qml/qqmlprivate.h:103
      #23 0x0000007faf229540 in QObjectPrivate::deleteChildren (this=this@entry=0x141ad90) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:2010
      #24 0x0000007faf232b2c in QObject::~QObject (this=<optimized out>, __in_chrg=<optimized out>) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:1032
      #25 0x0000007fb007972c in QQuickItem::~QQuickItem (this=0x952f60, __in_chrg=<optimized out>) at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/quick/items/qquickitem.cpp:2383
      #26 0x0000007fb0098c5c in QQmlPrivate::QQmlElement<QQuickItem>::~QQmlElement (this=0x952f60, __in_chrg=<optimized out>)
          at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/qml/qml/qqmlprivate.h:103
      #27 QQmlPrivate::QQmlElement<QQuickItem>::~QQmlElement (this=0x952f60, __in_chrg=<optimized out>) at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/qml/qml/qqmlprivate.h:103
      #28 0x0000007faf229540 in QObjectPrivate::deleteChildren (this=this@entry=0x10cc0a0) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:2010
      #29 0x0000007faf232b2c in QObject::~QObject (this=<optimized out>, __in_chrg=<optimized out>) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:1032
      #30 0x0000007fb007972c in QQuickItem::~QQuickItem (this=0x1e62ae0, __in_chrg=<optimized out>) at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/quick/items/qquickitem.cpp:2383
      #31 0x0000007f9e30c09c in QQmlPrivate::QQmlElement<QQuickControl>::~QQmlElement (this=0x1e62ae0, __in_chrg=<optimized out>) at /usr/include/QtQml/qqmlprivate.h:103
      #32 QQmlPrivate::QQmlElement<QQuickControl>::~QQmlElement (this=0x1e62ae0, __in_chrg=<optimized out>) at /usr/include/QtQml/qqmlprivate.h:103
      #33 0x0000007faf229540 in QObjectPrivate::deleteChildren (this=this@entry=0x16fca40) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:2010
      #34 0x0000007faf232b2c in QObject::~QObject (this=<optimized out>, __in_chrg=<optimized out>) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:1032
      #35 0x0000007fb007972c in QQuickItem::~QQuickItem (this=0x1bdfa40, __in_chrg=<optimized out>) at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/quick/items/qquickitem.cpp:2383
      #36 0x0000007fb0098c5c in QQmlPrivate::QQmlElement<QQuickItem>::~QQmlElement (this=0x1bdfa40, __in_chrg=<optimized out>)
          at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/qml/qml/qqmlprivate.h:103
      #37 QQmlPrivate::QQmlElement<QQuickItem>::~QQmlElement (this=0x1bdfa40, __in_chrg=<optimized out>) at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/qml/qml/qqmlprivate.h:103
      #38 0x0000007faf229540 in QObjectPrivate::deleteChildren (this=this@entry=0x1328dc0) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:2010
      #39 0x0000007faf232b2c in QObject::~QObject (this=<optimized out>, __in_chrg=<optimized out>) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:1032
      #40 0x0000007fb007972c in QQuickItem::~QQuickItem (this=0xb560a0, __in_chrg=<optimized out>) at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/quick/items/qquickitem.cpp:2383
      #41 0x0000007fb0098bc4 in QQuickRectangle::~QQuickRectangle (this=0xb560a0, __in_chrg=<optimized out>)
          at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/quick/items/qquickrectangle_p.h:156
      #42 QQmlPrivate::QQmlElement<QQuickRectangle>::~QQmlElement (this=0xb560a0, __in_chrg=<optimized out>)
          at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/qml/qml/qqmlprivate.h:103
      #43 QQmlPrivate::QQmlElement<QQuickRectangle>::~QQmlElement (this=0xb560a0, __in_chrg=<optimized out>)
          at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/qml/qml/qqmlprivate.h:103
      #44 0x0000007faf229540 in QObjectPrivate::deleteChildren (this=this@entry=0x160d350) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:2010
      #45 0x0000007faf232b2c in QObject::~QObject (this=<optimized out>, __in_chrg=<optimized out>) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:1032
      #46 0x0000007fb007972c in QQuickItem::~QQuickItem (this=0x1bd57a0, __in_chrg=<optimized out>) at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/quick/items/qquickitem.cpp:2383
      #47 0x0000007fb0098c5c in QQmlPrivate::QQmlElement<QQuickItem>::~QQmlElement (this=0x1bd57a0, __in_chrg=<optimized out>)
          at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/qml/qml/qqmlprivate.h:103
      #48 QQmlPrivate::QQmlElement<QQuickItem>::~QQmlElement (this=0x1bd57a0, __in_chrg=<optimized out>) at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/qml/qml/qqmlprivate.h:103
      #49 0x0000007faf22c688 in QObject::event (this=this@entry=0x1bd57a0, e=e@entry=0x1c87390) at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qobject.cpp:1251
      #50 0x0000007fb0077750 in QQuickItem::event (this=0x1bd57a0, ev=0x1c87390) at /usr/src/debug/qtdeclarative/5.12.2+gitAUTOINC+cd7ce85ff0-r0/git/src/quick/items/qquickitem.cpp:8105
      #51 0x0000007faf1fe03c in QCoreApplication::notifyInternal2 (receiver=0x1bd57a0, event=0x1c87390)
          at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qcoreapplication.cpp:1060
      #52 0x0000007faf1fe23c in QCoreApplication::sendEvent (receiver=<optimized out>, event=event@entry=0x1c87390)
          at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qcoreapplication.cpp:1450
      #53 0x0000007faf201180 in QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x49e6c0)
          at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qcoreapplication.cpp:1799
      #54 0x0000007faf254490 in QEventDispatcherUNIX::processEvents (this=0x4a6500, flags=..., flags@entry=...)
          at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qeventdispatcher_unix.cpp:466
      #55 0x0000007faa1ff494 in QUnixEventDispatcherQPA::processEvents (this=<optimized out>, flags=...)
          at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/platformsupport/eventdispatchers/qunixeventdispatcher.cpp:63
      #56 0x0000007faf1fc7f4 in QEventLoop::exec (this=this@entry=0x7ffa69b5c0, flags=..., flags@entry=...)
          at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qeventloop.cpp:225
      #57 0x0000007faf205108 in QCoreApplication::exec () at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/corelib/kernel/qcoreapplication.cpp:1363
      #58 0x0000007fafa52188 in QGuiApplication::exec () at /usr/src/debug/qtbase/5.12.2+gitAUTOINC+856fb1ab44-r0/git/src/gui/kernel/qguiapplication.cpp:1779
      

       

        For Gerrit Dashboard: QTBUG-75677
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            danilpinchuk Danil Pinchuk
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes