src/compositor/extensions/qwaylandxdgshellv6.h
@@ -119,7 +119,7 @@ public:
     static QByteArray interfaceName();
     static QWaylandXdgSurfaceV6 *fromResource(::wl_resource *resource);
 
-#ifdef QT_WAYLAND_COMPOSITOR_QUICK
+#if QT_CONFIG(wayland_compositor_quick)
     QWaylandQuickShellIntegration *createIntegration(QWaylandQuickShellSurfaceItem *item) override;
 #endif
 
